[tool.poetry]
name = "migaku-player-converter"
version = "0.3.0"
description = "Converts video files for Migaku Player"
authors = ["Your Name <you@example.com>"]
license = "gpl2"

[tool.poetry.dependencies]
python = "^3.9"
ffmpeg-python = "^0.2.0"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
PyQt5-stubs = "^5.15.2"
pyinstaller = "^4.5.1"

[tool.black]
line-length = 120

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
